--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
     "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
+    "fluxthis": "2.9.1",
+    "immutable": "3.8.1",
     "prop-types": "15.5.10",
     "react": "15.5.4",
-    "react-dom": "15.5.4"
+    "react-dom": "15.5.4",
+    "react-immutable-proptypes": "2.1.0",
+    "underscore": "1.8.3"
   }
 }
