Interlude - Adding libraries and setup files for Unit Testing via Jest/Enzyme.

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,10 @@
         "browsers": ["last 2 versions"]
       },
     }]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
